Add partial/full screenshot QS tile single tap to choose the mode, long press to fire
thanks @kantjer for the icons!

Change-Id: Id42bc6399e37f277fa345849d71ebef182b53b05

--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -92,4 +92,8 @@
     <string name="global_screenshot_selector_capture_description">Teil-Screenshot aufnehmen</string>
     <string name="global_screenshot_selector_cancel_description">Teil-Screenshot abbrechen</string>
 
+    <!-- Screenshot QS tile -->
+    <string name="quick_settings_screenshot_label">Screenshot</string>
+    <string name="quick_settings_region_screenshot_label">Teil-Screenshot</string>
+
 </resources>
