Add Google Sound Search tile
Change-Id: I9eab7d8242bfd994464184898eed855f71e9a028

SoundSearchTile: Make default state inactive

Disable long click for SoundSearch tile

Change-Id: Id893722185fa4f111f2730849d1c8abfffa121dc
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -103,4 +103,6 @@
     <string name="screenrecord_stopdot_label">Stopppunkt anzeigen\nLang drücken, um es zu bewegen</string>
     <string name="screenrecord_lowquality_label">Geringere Qualität für kleinere Dateien</string>
 
+    <string name="quick_settings_sound_search">Musikerkennung</string>
+
 </resources>
