--- a/packages/SystemUI/res/values/derp_config.xml
+++ b/packages/SystemUI/res/values/derp_config.xml
@@ -36,4 +36,7 @@
          This allows for the first block in PathEffect to fade -->
     <integer name="config_pulseDbFuzz">2</integer>
 
+    <!-- Asus stitch editor component name -->
+    <string name="config_stitchEditor">com.asus.stitchimage/com.asus.stitchimage.editor.ScreenshotEditorActivity</string>
+
 </resources>
