--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -109,4 +109,8 @@
     <string name="quick_settings_monotoggle_tile_mono">Mono-Audio</string>
     <string name="quick_settings_monotoggle_tile_stereo">Stereo-Audio</string>
 
+    <!-- Kill app -->
+    <string name="task_helper_app_killed">%1$s gewalthaft gestoppt</string>
+    <string name="empty_app_killed">App</string>
+
 </resources>
