--- a/core/res/res/values-de/derp_strings.xml
+++ b/core/res/res/values-de/derp_strings.xml
@@ -62,4 +62,8 @@
     <string name="sleep_mode_notification_content">Tippen, um den Schlafmodus zu deaktivieren</string>
     <string name="sleep_mode_enabled_toast">Schlafmodus eingeschaltet</string>
     <string name="sleep_mode_disabled_toast">Schlafmodus ausgeschaltet</string>
+
+    <!-- Clipboard access toast -->
+    <string name="app_clipboard_access_denied">%1$s wurde der Zugriff auf die Zwischenablage verweigert</string>
+    <string name="app_clipboard_access_granted">%1$s wurde Zugriff auf die Zwischenablage gewährt</string>
 </resources>
