base: Add QS Panel Type Background [1/2]
SDB: import Seprate Image Utils for the same

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -4063,4 +4063,10 @@
 
   <!-- For dynamic default font styles -->
   <java-symbol type="string" name="config_bodyFontFamily" />
+
+  <!-- QS Inset -->
+  <java-symbol type="dimen" name="qs_background_inset" />
+
+  <java-symbol type="attr" name="colorBackgroundFloating" />
+
 </resources>
