--- a/packages/SystemUI/res/values/derp_config.xml
+++ b/packages/SystemUI/res/values/derp_config.xml
@@ -30,4 +30,10 @@
     <!-- Allow devices override audio panel location to the left side -->
     <bool name="config_audioPanelOnLeftSide">false</bool>
 
+    <!-- DbFuzz adds it's value in pixels to the magnitude
+         It is recommended to set this value so that it is
+         less than config_pulsePathEffect_1, measured in pixels
+         This allows for the first block in PathEffect to fade -->
+    <integer name="config_pulseDbFuzz">2</integer>
+
 </resources>
