--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -40,7 +40,7 @@
     <string name="accessibility_quick_settings_caffeine_on">Koffein ein</string>
 
     <!-- DataSwitch Tile -->
-    <string name="qs_data_switch_label">Datenkarte wechseln</string>
+    <string name="qs_data_switch_label">Datenkarte wechseln zu</string>
     <string name="qs_data_switch_toast_0">Derzeit ist keine SIM-Karte eingelegt</string>
     <string name="qs_data_switch_toast_1">Derzeit ist nur eine SIM-Karte eingelegt</string>
     <string name="qs_data_switch_changed_1">Datenkarte auf SIM 1 umschalten.</string>
