Ambient music v2: Allow for changing the music ticker position [1/2]. This will add the music ticker to the ambient screen / AoD just like on Pixel devices. It will work with ezio's music ticker and now playing commits for Android R. Other part of the commit is in Settings.
The core of the ambient music ticker uses the media detection logic from
the KeyguardSliceProvider.

[@spezi77] General notes:
* Complete rewrite for Android R, partially based on the commits by @ezio84
  and other authors from Android Pie (see comment below).
* Kept the indication clean, no marquee and no fancy background pill,
  closer to what Google implemented with the Pixel factory image (Android R).
* Improved the NP indication play nice with ambient wake gestures.
  If you wake the device from sleep (lift or double-tap) in certain scenarios
  (when using ambient on wake instead of lockscreen while AoD is disabled),
  the "Now Playing" title is not displayed. In that case it is only displayed
  when you activate the lock screen and return to the ambient display.
  Ref. commit for the ambient on wake option:
  https://github.com/PixelDust-Eleven/android_frameworks_base/commit/75d7c4b54a204fa08794df9265bea926cabd3d6e

---

Some parts are based in part on code from other authors. Unfortunately, when
porting the feature to Android R, I couldn't insert these as individual commits,
because I had to rewrite a lot of things.

To let you know who also contributed, some mentions:
ezio84, frap129, eldainosor and jhenrique09

To mention some of the commits:
* Port ambient Now Playing container from Pixel [stripped down version] https://github.com/pixeldust-project-caf/android_frameworks_base/commit/bf4c64575cbe2633be12493ea8f51f01fd05fc8e
* Ambient display music ticker [1/2] https://github.com/ezio84/abc_frameworks_base/commit/b6ec18a72c9a944eb4e679f0239cc8d84865ea37
* Ambient Music Ticker: make it pixel like https://github.com/pixeldust-project-caf/android_frameworks_base/commit/9cee2d4e20f57838b47abc

--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -118,4 +118,7 @@
     <string name="app_picker_dialog_title">App auswählen</string>
     <string name="app_picker_activity_select_title">Aktion wählen</string>
 
+    <!-- Ambient Music Ticker -->
+    <string name="ambientmusic_songinfo" formatted="false">%s von %s</string>
+
 </resources>
