base: Introduce automated Sleep Mode [1/3]
Change-Id: I85fc36e6db7ceeca1a1031f71f3882a776864814
Signed-off-by: Anushek Prasal <anushekprasal@gmail.com>
[nurkeinneid] Remove Aggressive battery and sensors toogle
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -218,4 +218,7 @@
     <string name="vpn_credentials_password">Passwort</string>
     <string name="vpn_credentials_dialog_connect">Verbinden</string>
 
+    <!-- Sleep Mode -->
+    <string name="quick_settings_sleep_mode_label">Schlafmodus</string>
+
 </resources>
