--- a/core/res/res/values-de/derp_strings.xml
+++ b/core/res/res/values-de/derp_strings.xml
@@ -55,4 +55,11 @@
     <string name="accessibility_quick_settings_live_display_changed_day">LiveDisplay auf Tag-Modus geändert.</string>
     <string name="accessibility_quick_settings_live_display_changed_night">LiveDisplay auf Nacht-Modus geändert.</string>
     <string name="accessibility_quick_settings_live_display_changed_outdoor">LiveDisplay auf Außen-Modus geändert.</string>
+
+    <!-- Sleep Mode -->
+    <string name="notification_channel_sleep">Schlafmodus</string>
+    <string name="sleep_mode_notification_title">Schlafmodus aktiviert</string>
+    <string name="sleep_mode_notification_content">Tippen, um den Schlafmodus zu deaktivieren</string>
+    <string name="sleep_mode_enabled_toast">Schlafmodus eingeschaltet</string>
+    <string name="sleep_mode_disabled_toast">Schlafmodus ausgeschaltet</string>
 </resources>
