--- a/packages/SystemUI/res/values/derp_strings.xml
+++ b/packages/SystemUI/res/values/derp_strings.xml
@@ -283,4 +283,6 @@
     <!-- Sleep Mode -->
     <string name="quick_settings_sleep_mode_label">Sleep Mode</string>
 
+    <!-- DerpQuest Tile -->
+    <string name="quick_settings_derpquest_label">DerpQuest</string>
 </resources>
