--- a/core/res/res/values/derp_dimens.xml
+++ b/core/res/res/values/derp_dimens.xml
@@ -18,4 +18,9 @@
 
     <dimen name="toast_elevation">4dp</dimen>
 
+    <!-- Height of the bottom navigation bar frame when hide ime space -->
+    <dimen name="navigation_bar_frame_height_hide_ime">16dp</dimen>
+    <!-- Height of the bottom navigation bar frame in landscape when hide ime space -->
+    <dimen name="navigation_bar_frame_height_landscape_hide_ime">@dimen/navigation_bar_frame_height_hide_ime</dimen>
+
 </resources>
