--- a/core/res/res/values/derp_symbols.xml
+++ b/core/res/res/values/derp_symbols.xml
@@ -219,4 +219,8 @@
 
     <!-- Wheter device supports an gaming mode profiles -->
     <java-symbol type="bool" name="config_gamingmode_performance" />
+
+    <!-- Hide IME space -->
+    <java-symbol type="dimen" name="navigation_bar_frame_height_hide_ime" />
+    <java-symbol type="dimen" name="navigation_bar_frame_height_landscape_hide_ime" />
 </resources>
