--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -221,4 +221,8 @@
     <!-- Sleep Mode -->
     <string name="quick_settings_sleep_mode_label">Schlafmodus</string>
 
+    <!-- Text for the quick setting tile for sensor privacy [CHAR LIMIT=30] -->
+    <string name="sensor_privacy_mode_tile">Sensoren</string>
+    <string name="quick_settings_on">Aktiviert</string>
+    <string name="quick_settings_off">Deaktiviert</string>
 </resources>
