--- a/packages/SystemUI/res/values/derp_strings.xml
+++ b/packages/SystemUI/res/values/derp_strings.xml
@@ -285,4 +285,9 @@
 
     <!-- DerpQuest Tile -->
     <string name="quick_settings_derpquest_label">DerpQuest</string>
+
+    <!-- Text for the quick setting tile for sensor privacy [CHAR LIMIT=30] -->
+    <string name="sensor_privacy_mode_tile">Sensors</string>
+    <string name="quick_settings_on">On</string>
+    <string name="quick_settings_off">Off</string>
 </resources>
