--- a/packages/SystemUI/res-keyguard/layout/clock_gradient_fire.xml
+++ b/packages/SystemUI/res-keyguard/layout/clock_gradient_fire.xml
@@ -8,12 +8,13 @@
 
     <ImageView
         android:id="@+id/romLogoView"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_gravity="bottom|right"
-        android:layout_marginRight="-90dp"
+        android:layout_marginRight="-60dp"
+        android:layout_marginBottom="-20dp"
         android:src="@drawable/gradient_fire_rom_logo"
-        android:alpha="0.36"
+        android:alpha="0.5"
         android:tint="?attr/wallpaperTextColor" />
 
     <ImageView
