GamingMode: opt-out performance profile support [1/3]
    * Not all devices have performance profiles.
      Do not mislead users if this is not implemented.
      Maintainers can enable it in device tree via overlay
      if they have implemented performance profiles

Change-Id: I515453d0c7c6025f67a456124287b8763c7064a8
Signed-off-by: DennySPb <dennyspb@gmail.com>

--- a/core/res/res/values/derp_config.xml
+++ b/core/res/res/values/derp_config.xml
@@ -241,4 +241,7 @@
     <!-- Whether to enable OnePlus Camera hack -->
     <bool name="config_enableOnePlusCameraHack">false</bool>
 
+    <!-- Wheter device supports an gaming mode profiles -->
+    <bool name="config_gamingmode_performance">false</bool>
+
 </resources>
