reticker: Add color for youtube in blacklist
Change-Id: I0436bcbbba150b1ef97cffe2e2e195483cbbbdcd3
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/packages/SystemUI/res/values/derp_arrays.xml
+++ b/packages/SystemUI/res/values/derp_arrays.xml
@@ -33,6 +33,7 @@
         <item>com.google.android.dialer</item>
         <item>#FF2162D7</item>
         <item>com.google.android.youtube</item>
+        <item>#ffde4b4b</item>
     </string-array>
 
 </resources>
